@@ -1,3 +1,7 @@
+2009-02-13
+- improved object oriented layout
+- tint2 looks good for me. if you see bugs, report it.
+
 2009-02-12
 - fixed issue 14 : no icons
 
